<resources>
    <string name="app_name">凯云端</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_help">帮助与反馈</string>
    <string name="action_settings">设置</string>
    <string name="bottom_persion">用户</string>
    <string name="bottom_home">首页</string>
    <string name="bottom_wuye">物业</string>
    <string name="bottom_shequ">社区</string>
    <string name="bottom_paixilai">拍下来</string>

    <string name="d">ttt</string>

    <string name="forget_password">忘记密码?</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="title_activity_regster">用户注册</string>
    <string name="yz_telphone">验证我的手机:</string>
    <string name="input_tel_hint">请输入手机号码</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_password_hint2">请再次输入密码</string>
    <string name="register_input_yz">请输入验证码</string>
    <string name="register_yz">验证</string>
    <string name="pai_input_hint">您的分享如礼物般值的期待......</string>
    <string name="pai_share_bq">选择分享标签:</string>
    <string name="pai_add_pic">添加照片</string>
    <string name="username_null">手机号码不能为空</string>
    <string name="username_err">手机号码不正确</string>
    <string name="password_length_err">密码长度需在8-16位之间</string>
    <string name="password_err">密码不能有特殊字符</string>
</resources>
