<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cloud.kai.com.kaicloud.com.kaicloud.activity.RegsterActivity">

    <RelativeLayout

        android:id="@+id/register_info_ly"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/register_info_bg"
        android:paddingBottom="0dp"
        android:paddingTop="1dp">

        <EditText
            android:id="@+id/register_tel_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/bright_foreground_material_dark"
            android:hint="@string/input_tel_hint"
            android:paddingLeft="70dp" />

        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/register_tel_et"
            android:padding="10dp"
            android:src="@mipmap/ic_registered_phone" />

        <ImageView
            android:id="@+id/register_dashed_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_tel_et"

            android:background="@drawable/dotted_line_gray"
            android:layerType="software" />


        <EditText
            android:id="@+id/register_password_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/register_dashed_line1"
            android:background="@color/bright_foreground_material_dark"
            android:hint="@string/register_password_hint"
            android:paddingLeft="70dp" />

        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/register_password_et"
            android:padding="10dp"
            android:src="@mipmap/ic_login_password" />

        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/register_password_et"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@mipmap/but_eye_off" />

        <ImageView
            android:id="@+id/register_dashed_line2"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_et"

            android:background="@drawable/dotted_line_gray"
            android:layerType="software" />


        <EditText
            android:id="@+id/register_password2_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/register_dashed_line2"
            android:background="@color/bright_foreground_material_dark"
            android:hint="@string/register_password_hint2"
            android:paddingLeft="70dp" />

        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/register_password2_et"
            android:padding="10dp"
            android:src="@mipmap/ic_login_password" />

        <ImageView

            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/register_password2_et"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:src="@mipmap/but_eye_off" />
    </RelativeLayout>

    <TextView
        android:id="@+id/register_yzm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_info_ly"
        android:layout_marginTop="15dp"
        android:text="@string/yz_telphone" />

    <EditText

        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/register_yzm_tv"
        android:layout_toRightOf="@id/register_yzm_tv"
        android:background="@drawable/register_info_bg"
        android:hint="@string/register_input_yz" />

    <TextView
        android:id="@+id/register_yz_tv"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/register_yzm_tv"
        android:background="@drawable/register_yz_bg"
        android:gravity="center"
        android:hint="@string/register_yz" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/register_yz_tv"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="40dp"
        android:background="@drawable/textview_radius"
        android:gravity="center"
        android:hint="@string/register_text" />
</RelativeLayout>
