<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PaiFragment">

    <EditText
        android:id="@+id/pai_shuoshuo_edt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffffff"
        android:drawableLeft="@mipmap/ic_label_gift"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/ic_label_gift"
        android:gravity="start"
        android:hint="@string/pai_input_hint" />

    <ImageView
        android:id="@+id/pai_biaoqian_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@id/pai_shuoshuo_edt"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/ic_label_share"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/pai_fenxiang_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/pai_biaoqian_icon"
        android:layout_alignTop="@id/pai_biaoqian_icon"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/pai_biaoqian_icon"
        android:layout_toRightOf="@id/pai_biaoqian_icon"
        android:gravity="center"
        android:text="@string/pai_share_bq" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/pai_shuoshuo_edt"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/pai_biaoqian_icon"
        android:layout_toRightOf="@id/pai_biaoqian_icon"
        android:background="#bbbbbb"
        android:gravity="center" />

    <TextView
        android:id="@+id/pai_bianqianliebie_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/pai_biaoqian_icon"
        android:layout_alignTop="@id/pai_biaoqian_icon"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/pai_fenxiang_tv"
        android:gravity="center" />

    <ImageView

        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/pai_biaoqian_icon"
        android:layout_below="@id/pai_shuoshuo_edt"
        android:layout_marginRight="55dp"
        android:background="@mipmap/label_but_plus" />

    <TextView
        android:id="@+id/pai_add_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pai_biaoqian_icon"
        android:background="@drawable/pai_add_bg"
        android:drawableLeft="@mipmap/bill_arrow_up"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:text="@string/pai_add_pic"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/pai_fb_tv"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/pai_add_pic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/pai_add_bg"
        android:gravity="center"
        android:text="发布"
        android:textColor="#ffffff"
        android:textSize="15dp" />
</RelativeLayout>
