<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cloud.kai.com.kaicloud.com.kaicloud.activity.LoginActivity">

    <ImageView
        android:id="@+id/login_logoid"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@mipmap/login_logo" />


    <EditText
        android:id="@+id/telphone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_logoid"
        android:layout_marginTop="40dp"

        android:background="@color/bright_foreground_material_dark"
        android:gravity="center"
        android:hint="手机号"
        android:inputType="phone"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/telphone_logoid"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_logoid"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:src="@mipmap/ic_login_phone" />

    <ImageView
        android:id="@+id/login_dashed_line"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/telphone"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:background="@drawable/dotted_line_gray"
        android:layerType="software" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/login_dashed_line"
        android:background="@color/bright_foreground_material_dark"
        android:gravity="center"
        android:hint="密码"
        android:inputType="textPassword"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/password_logoid1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/login_dashed_line"
        android:layout_marginLeft="10dp"
        android:paddingLeft="20dp"
        android:src="@mipmap/ic_login_password" />

    <ImageView
        android:id="@+id/password_logoid2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/login_dashed_line"
        android:paddingRight="20dp"
        android:src="@mipmap/but_eye_off" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password"
        android:layout_marginRight="30dp"

        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/forget_password" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@id/forget_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_radius"
        android:gravity="center"
        android:text="@string/login_text" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/textview_radius"
        android:gravity="center"
        android:text="@string/register_text" />
</RelativeLayout>
